[package]
name = "pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
env_logger = "0.10.1"
json = "0.12.4"
log = "0.4.20"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
toml = "0.8.8"
earth = { git = "https://github.com/GhostMinerPlus/earth.git"  }
rand = "0.8.5"
edge_lib = { git = "https://github.com/GhostMinerPlus/edge_lib.git" }
jwt = "0.16.0"
sha2 = "0.10.8"
hmac = "0.12.1"
pnet = "0.34.0"
md5 = "0.7.0"
base64 = "0.22.1"
